# tensor-networks

./: .flake8  .gitignore  1.py  Pipfile  decomposition.py  feature_map.py  image_compression.py  makefile  mypy.ini  pyproject.toml  setup_logging.py  svd.py  tensor_train.py  test.py  weird_svd.py
data/2x2-gradient/: 2x2.mat
examples/: image_compression.py  mnist_example.py  simple_example.py  util.py
examples/dummy_gradient/: 2x2-gradients.mat  dummy_gradient.py  generate_data.py
examples/mnist/: mnist-7x7.mat  mnist.py
examples/utils/: greyscale_image.py  io.py  label.py
misc/: weird_svd.py
scripts/: image_compression.py  test.py
tensor_networks/: annotations.py  classification.py  contraction.py  decomposition.py  feature.py  feature_map.py  inputs.py  misc.py  optimization.py  patch_dtype.py  patched_numpy.py  svd.py  tensor_train.py  training.py  transposition.py  utils.py  weights.py
tensor_networks/misc/: weird_svd.py
tensor_networks/utils/: annotations.py  iteration.py  tensors.py
tests/: helpers.py  test_svd.py  test_tensor_train.py  test_training.py  test_transposition.py
unused/: decorators.py  image_compression.py  weird_svd.py
utils/: annotations.py
